buildscript {
    repositories {
        maven {
            url "https://plugins.gradle.org/m2/"
        }
    }

    dependencies {
        classpath "com.moowork.gradle:gradle-node-plugin:1.3.1"
        classpath("com.dipien:semantic-version-gradle-plugin:2.0.0")
    }

    ext {
        testFailures = 0
    }
}


plugins {
    id 'java-library'
    id 'jacoco'
    id "org.sonarqube" version "4.0.0.2929"
}

version = '1.0.1-SNAPSHOT'  // The plugin will assign the root project version to all its subprojects.
apply plugin: "com.dipien.semantic-version"
apply from: "${rootDir}/gradle/sonar.gradle"

subprojects {
    repositories {
        mavenCentral()
        maven {
            url "https://packages.confluent.io/maven"
        }
    }

    apply plugin: 'java'
    apply plugin: 'jacoco'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(17)
        }
    }
}

gradle.buildFinished {
    def failures = rootProject.ext.testFailures

    if (failures > 0) { // check if any tests failed
        throw new GradleException("The build finished but ${rootProject.ext.testFailures} tests failed! ")
    }
}
